- menu collapsed corrected

--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -247,7 +247,7 @@ header#navbar {
       }
 
       // menus shown permanently
-      @media @tablet {
+      @media @menu-breakpoint {
         position: static;
         top: auto;
         right: auto;
